:art: 一个额外的分支

--- a/public/dev.html
+++ b/public/dev.html
@@ -16,7 +16,7 @@
         <meta http-equiv="expires" content="0"/>
         <meta http-equiv="Cache-Control" content="no-siteapp"/>
         <font-face font-family="方正像素12" src="fonts/方正像素12.ttf"/>
-        <title>Life Restart</title>
+        <title>重生</title>
     </head>
     <body style="background:black">
         <!--以下引用了常用类库，如果不使用，可以删除-->
